card covering up navbar while hovering issue resolved

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
   align-items: center;
   background-color: #4a4a4a;
   margin-top: 0;
+  z-index: 9000;
 }
 
 .navbar .fa-bars{
