--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -25,6 +25,7 @@
 }
 .card:hover {
     transform: scale(1.1);
+    z-index: 1;
 }
 
 hr{
